@@ -8,6 +8,7 @@ v0.3.0rc - XXXX
   - Actions: renamed FadeOutTiles to FadeOutTRTiles
   - Actions: added Ripple3D effect
   - Actions: Waves. parameter horizontal_sin and vertical_sin renamed to hsin and vsin
+  - Director: default projection is 3D (not glOrtho)
 
 v0.3.0beta0 - May 5th, 2008
   - Actions: actions are defined in the actions/ folder
